# astron-rpa

./: .gitignore  BUILD_GUIDE.zh.md  README.md  README.zh.md  pack.bat
engine/: .gitignore  __main__.py  build.bat  conf.json  main.py  pyproject.toml  requirements.txt
engine/components/astronverse-ai/: config.yaml  meta.py  pyproject.toml
engine/components/astronverse-browser/: meta.py  meta_type.json  pyproject.toml
engine/components/astronverse-database/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-dataprocess/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-dialog/: meta.py  pyproject.toml
engine/components/astronverse-email/: meta.py  pyproject.toml
engine/components/astronverse-encrypt/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-encrypt/tests/: test_encrypt.py
engine/components/astronverse-enterprise/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-excel/: config.yaml  meta.py  pyproject.toml
engine/components/astronverse-input/: MANIFEST.in  config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-network/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-openapi/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-pdf/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-report/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-script/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-software/: config.yaml  meta.py  pyproject.toml
engine/components/astronverse-system/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-system/tests/: test_clipboard.py  test_compress.py  test_file.py  test_folder.py
engine/components/astronverse-verifycode/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/astronverse-vision/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-vision/tests/: test_cv.py
engine/components/astronverse-window/: meta.json  meta.py  pyproject.toml
engine/components/astronverse-winelement/: config.yaml  meta.py  pyproject.toml
engine/components/astronverse-word/: config.yaml  meta.py  meta_type.json  pyproject.toml
engine/components/astronverse-workflowlib/: main.py  pyproject.toml
engine/components/rpaai/: MANIFEST.in  meta.json  meta.py  pyproject.toml
engine/components/rpabrowser/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpacv/: config.yaml  meta.py  pyproject.toml
engine/components/rpacv/tests/: test_cv.py
engine/components/rpadatabase/: meta.json  meta.py  pyproject.toml
engine/components/rpadataprocess/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpadataprocess/tests/: test_data.py  test_dataconvert.py  test_dict.py  test_list.py  test_math.py  test_string.py  test_time.py
engine/components/rpademo/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpademo/tests/: test_demo.py
engine/components/rpadialog/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpadialog/tests/: demo.py
engine/components/rpadocx/: meta.json  meta.py  pyproject.toml
engine/components/rpadocx/tests/: test_docx.py
engine/components/rpaemail/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpaencrypt/: meta.json  meta.py  pyproject.toml
engine/components/rpaencrypt/tests/: test_encrypt.py
engine/components/rpaenterprise/: meta.json  meta.py  pyproject.toml
engine/components/rpaenterprise/tests/: test_enterprise.py
engine/components/rpaexcel/: meta.json  meta.py  meta_type.json  pyproject.toml
engine/components/rpaexcel/tests/: test_excel.py
engine/components/rpagui/: meta.py  pyproject.toml
engine/components/rpagui/tests/: test.py  (+1 more)
engine/components/rpahelper/: main.py  model.py  pyproject.toml
engine/components/rpanetwork/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpaopenapi/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpapdf/: config.yaml  meta.py  pyproject.toml
engine/components/rpareport/: config.yaml  meta.json  meta.py  pyproject.toml
engine/components/rpascript/: meta.py  pyproject.toml
engine/components/rpasoftware/: meta.json  meta.py  pyproject.toml
engine/components/rpasystem/: meta.json  meta.py  pyproject.toml  test_process_core.py
engine/components/rpaverifycode/: meta.json  meta.py  pyproject.toml
engine/components/rpawindow/: config.yaml  meta.py  pyproject.toml
engine/components/rpawinele/: meta.json  meta.py  pyproject.toml
engine/core/setup/: __main__.py  config.py  logger.py  start.py
engine/execkit/atomic/: .gitignore  meta.py  meta_type.json  pyproject.toml
engine/execkit/executor/: .gitignore  main.py  pyproject.toml
engine/execkit/param_utils/: pyproject.toml  setup.py
engine/execkit/recording/: pyproject.toml
engine/execkit/tools/: pyproject.toml
engine/servers/astronverse-browser-bridge/: pyproject.toml
engine/servers/astronverse-executor/: pyproject.toml
engine/servers/astronverse-picker/: pyproject.toml
engine/servers/astronverse-scheduler/: .ruff.toml  pyproject.toml
engine/servers/astronverse-trigger/: pyproject.toml
engine/servers/astronverse-vision-picker/: pyproject.toml
engine/shared/astronverse-actionlib/: pyproject.toml
engine/shared/astronverse-baseline/: pyproject.toml
engine/shared/astronverse-browser-plugin/: pyproject.toml
engine/shared/astronverse-locator/: pyproject.toml
engine/shared/astronverse-tools/: pyproject.toml
engine/shared/astronverse-websocket-client/: pyproject.toml
engine/shared/astronverse-websocket-server/: pyproject.toml
engine/shared/locator/: .gitignore  pyproject.toml  requirements.txt
engine/shared/rpaframe/: pyproject.toml  requirements.txt
engine/shared/rpawebsocket/: pyproject.toml  requirements.txt
engine/shared/rpawebsocket-client/: pyproject.toml  requirements.txt
engine/shared/table_helper/: .gitignore  pyproject.toml
(+1201 files in other folders)
