[project]
name = "engine"
version = "1.0.0"
description = "engine."
requires-python = ">=3.13"

dependencies = [
    "astronverse-scheduler",
    "astronverse-trigger",
    "astronverse-browser-bridge",
    "astronverse-picker",
    "astronverse-vision-picker",
    "astronverse-executor",
    "astronverse-actionlib",
    "astronverse-baseline",
    "astronverse-browser-plugin",
    "astronverse-locator",
    "astronverse-websocket-client",
    "astronverse-websocket-server",
    "astronverse-tools",
    "astronverse-ai",
    "astronverse-browser",
    "astronverse-vision",
    "rpadatabase",
    "rpadataprocess",
    "astronverse-dialog",
    "astronverse-word",
    "astronverse-email",
    "astronverse-encrypt",
    "rpaenterprise",
    "astronverse-excel",
    "astronverse-input",
    "astronverse-workflowlib",
    "rpanetwork",
    "rpaopenapi",
    "astronverse-pdf",
    "rpareport",
    "astronverse-script",
    "astronverse-software",
    "rpasystem",
    "rpaverifycode",
    "astronverse-window",
    "astronverse-winelement",
]

[tool.uv.sources]
astronverse-baseline = {path = "./shared/astronverse-baseline", editable = true}
astronverse-actionlib = {path = "./shared/astronverse-actionlib", editable = true}
astronverse-browser-plugin = {path = "./shared/astronverse-browser-plugin", editable = true}
astronverse-locator = {path = "./shared/astronverse-locator", editable = true}
astronverse-websocket-client = {path = "./shared/astronverse-websocket-client", editable = true}
astronverse-websocket-server = {path = "./shared/astronverse-websocket-server", editable = true}
astronverse-tools = {path = "./shared/astronverse-tools", editable = true}
astronverse-scheduler = {path = "./servers/astronverse-scheduler", editable = true}
astronverse-trigger = {path = "./servers/astronverse-trigger", editable = true}
astronverse-picker = {path = "./servers/astronverse-picker", editable = true}
astronverse-vision-picker = {path = "./servers/astronverse-vision-picker", editable = true}
astronverse-executor = {path = "./servers/astronverse-executor", editable = true}
astronverse-ai = {path = "./components/astronverse-ai", editable = true}
astronverse-browser = {path = "./components/astronverse-browser", editable = true}
astronverse-vision = {path = "./components/astronverse-vision", editable = true}
rpadatabase = {path = "./components/rpadatabase", editable = true}
rpadataprocess = {path = "./components/rpadataprocess", editable = true}
astronverse-dialog = {path = "./components/astronverse-dialog", editable = true}
astronverse-word = {path = "./components/astronverse-word", editable = true}
astronverse-email = {path = "./components/astronverse-email", editable = true}
astronverse-encrypt = {path = "./components/astronverse-encrypt", editable = true}
rpaenterprise = {path = "./components/rpaenterprise", editable = true}
astronverse-excel = {path = "./components/astronverse-excel", editable = true}
astronverse-input = {path = "./components/astronverse-input", editable = true}
astronverse-workflowlib = {path = "./components/astronverse-workflowlib", editable = true}
rpanetwork = {path = "./components/rpanetwork", editable = true}
rpaopenapi = {path = "./components/rpaopenapi", editable = true}
astronverse-pdf = {path = "./components/astronverse-pdf", editable = true}
rpareport = {path = "./components/rpareport", editable = true}
astronverse-script = {path = "./components/astronverse-script", editable = true}
astronverse-software = {path = "./components/astronverse-software", editable = true}
rpasystem = {path = "./components/rpasystem", editable = true}
rpaverifycode = {path = "./components/rpaverifycode", editable = true}
astronverse-window = {path = "./components/astronverse-window", editable = true}
astronverse-winelement = {path = "./components/astronverse-winelement", editable = true}
astronverse-browser-bridge = {path = "./servers/astronverse-browser-bridge", editable = true}

[dependency-groups]
dev = [
  "ruff~=0.12.3"
]
