[project]
name = "astronverse-dialog"
version = "1.0.0"
description = "astronverse-dialog."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "astronverse-tools",
    "pynput"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}
astronverse-tools = {path = "../../shared/astronverse-tools", editable = true}


[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
