[project]
name = "astronverse-openapi"
version = "1.0.0"
description = "astronverse-openapi."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "requests",
    "openpyxl"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse-openapi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
