[project]
name = "astronverse-vision"
version = "1.0.0"
description = "astronverse-vision."
requires-python = ">=3.13"

dependencies = [
    "rpagui",
    "astronverse-actionlib",
    "opencv-python",
    "PyAutoGUI",
    "Pillow",
    "pynput",
    "numpy",
    "pywin32; sys_platform == 'win32'"
]

[tool.uv.sources]
rpagui = {path = "../../components/rpagui", editable = true}
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
