[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaai"
version = "1.0.33"
description = "rpaai."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "rpatools",
    "requests>=2.31.0",
    "dotenv",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "sseclient-py>=1.8.0",
    "rpabrowser; sys_platform == 'win32'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaai" = "src/rpaai"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpaai*"]


