[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpabrowser"
version = "1.0.92"
description = "rpabrowser."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "rpasoftware",
    "rpawindow",
    "rpagui",
    "requests",
    "rpaencrypt",
    "table_helper",
    "rpaframe",
    "pythonnet>=3.0.3; sys_platform == 'win32'",
    "locator>=2.6.59; sys_platform == 'win32'",
    "locator_linux>=1.0.5; sys_platform == 'linux'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpabrowser" = "src/rpabrowser"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpabrowser*"]

