[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpacv"
version = "1.0.10"
description = "rpacv."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "opencv-python>=4.5.4.60",
    "PyAutoGUI",
    "Pillow",
    "pynput",
    "numpy",
    "rpagui",
    "pywin32; sys_platform == 'win32'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpacv" = "src/rpacv"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpacv*"]


