[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpadatabase"
version = "1.0.4"
description = "rpadatabase."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "pymysql",
    "pyodbc",
    "cx_Oracle",
    "psycopg2"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpadatabase" = "src/rpadatabase"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpadatabase*"]


