[project]
name = "rpadatabase"
version = "1.0.0"
description = "rpadatabase."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "pymysql",
    "pyodbc",
    "cx_Oracle",
    "psycopg2"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpadatabase"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
