[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpadataprocess"
version = "1.0.48"
description = "rpadataprocess."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "numpy",
    "python-dateutil"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpadataprocess" = "src/rpadataprocess"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpadataprocess*"]


