[project]
name = "rpadataprocess"
version = "1.0.0"
description = "rpadataprocess."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "numpy",
    "python-dateutil"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpadataprocess"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
