[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpademo"
version = "1.0.0"
description = "rpademo."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpademo" = "src/rpademo"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpademo*"]
