[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpadialog"
version = "1.0.38"
description = "rpadialog."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "rpatools",
    "pynput"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpadialog" = "src/rpadialog"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpadialog*"]

