[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpadocx"
version = "1.0.42"
description = "rpadocx."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "python-docx",
    "psutil",
    "pillow",
    "pywin32; sys_platform == 'win32'",
    "pywpsrpc; sys_platform == 'linux'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpadocx" = "src/rpadocx"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpadocx*"]


