[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaemail"
version = "1.0.14"
description = "rpaemail."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaemail" = "src/rpaemail"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpaemail*"]


