[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaencrypt"
version = "1.0.4"
description = "rpaencrypt."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "pycryptodomex==3.21.0"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaencrypt" = "src/rpaencrypt"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpaencrypt*"]

