[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaenterprise"
version = "1.0.8"
description = "rpaenterprise."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "rpaframe",
    "requests"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaenterprise" = "src/rpaenterprise"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpaenterprise*"]


