[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaexcel"
version = "1.0.58"
description = "rpaexcel."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "psutil",
    "numpy",
    "Pillow",
    "pywin32; sys_platform == 'win32'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaexcel" = "src/rpaexcel"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpaexcel*"]


