[project]
name = "rpaexcel"
version = "1.0.0"
description = "rpaexcel."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "psutil",
    "numpy",
    "Pillow",
    "pywin32; sys_platform == 'win32'"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpaexcel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
