[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpagui"
version = "1.0.53"
description = "rpagui."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "pyautogui",
    "pyperclip>=1.9.0",
    "pynput>=1.7.6",
    "pywin32; sys_platform == 'win32'",
    "Pillow; sys_platform == 'linux'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpagui" = "src/rpagui"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpagui*"]

