[project]
name = "rpagui"
version = "1.0.0"
description = "rpagui."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "pyautogui",
    "pyperclip",
    "pynput",
    "pywin32; sys_platform == 'win32'",
    "Pillow; sys_platform == 'linux'"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpagui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
