[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpahelper"
version = "1.0.5"
description = "rpahelper."

requires-python = ">=3.7"
dependencies = [
    "requests",
    "rpaatomic",
    "rpa_param_utils"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpahelper" = "src/rpahelper"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpahelper*"]


