[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpanetwork"
version = "1.0.10"
description = "rpanetwork."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "requests>=2.31.0"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpanetwork" = "src/rpanetwork"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpanetwork*"]


