[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaopenapi"
version = "1.0.6"
description = "rpaopenapi."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "rpaframe",
    "openpyxl"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaopenapi" = "src/rpaopenapi"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpaopenapi*"]


