[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpapdf"
version = "1.0.31"
description = "rpapdf."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "pypdf==4.3.1",
    "python-docx==1.1.0",
    "pdfplumber==0.9.0",
    "pandas",
    "openpyxl==3.1.3",
    "pypdfium2==4.30.0"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpapdf" = "src/rpapdf"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpapdf*"]


