[project]
name = "rpareport"
version = "1.0.0"
description = "rpareport."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpareport"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
