[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpascript"
version = "1.0.14"
description = "rpascript."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "requests"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpascript" = "src/rpascript"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpascript*"]


