[project]
name = "rpascript"
version = "1.0.0"
description = "rpascript."
requires-python = ">=3.13"

dependencies = [
    "astronverse-actionlib",
    "requests"
]

[tool.uv.sources]
astronverse-actionlib = {path = "../../shared/astronverse-actionlib", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src/rpascript"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
