[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpasoftware"
version = "1.0.19"
description = "rpasoftware."

requires-python = ">=3.7"
dependencies = [
    "psutil>=6.0.0",
    "rpaatomic",
    "pywin32>=306; sys_platform == 'win32'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpasoftware" = "src/rpasoftware"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpasoftware*"]

