[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpasystem"
version = "1.0.44"
description = "rpasystem."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "pandas",
    "chardet",
    "pyzipper",
    "charset_normalizer",
    "pyperclip",
    "pyautogui",
    "openpyxl",
    "send2trash",
    "pillow",
    "pywin32; sys_platform == 'win32'",
    "py7zr; sys_platform == 'win32'",
    "Pillow; sys_platform == 'linux'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpasystem" = "src/rpasystem"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]           
include = ["rpasystem*"]

