[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpaverifycode"
version = "1.0.11"
description = "rpaverifycode."

requires-python = ">=3.7"
dependencies = [
    "rpaatomic",
    "rpaframe",
    "pyautogui",
    "locator",
    "pytweening",
    "requests",
    "rpabrowser"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools]
package-dir = {"rpaverifycode" = "src/rpaverifycode"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["rpaverifycode*"]


